django_gke/k8s/polls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polls
  namespace: polls
spec:
  selector:
    matchLabels:
      app: polls
  template:
    metadata:
      labels:
        app: polls
    spec:
      serviceAccountName: polls-service-account
      containers:
      - name: polls
        image: us-central1-docker.pkg.dev/cronjobs-409106/polls/polls:2cd2603da39ae1d9a4d602434ed0d63d16aab38f
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          - "--private-ip"
          - "--structured-logs"
          - "--port=3306"
          - "cronjobs-409106:us-central1:prod-mysql=tcp:3306"
        securityContext:
          runAsNonRoot: true
        resources:
          requests:
            memory: "2Gi"
            cpu:    "1"
---

apiVersion: v1
kind: Service
metadata:
  name: polls
  namespace: polls
spec:
  type: LoadBalancer
  selector:
    app: polls
  ports:
  - port: 8000
    targetPort: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polls
  namespace: polls
  annotations:
    kubernetes.io/ingress.global-static-ip-name: polls
    networking.gke.io/managed-certificates: polls-cert
    ingressClassName: "gce"
spec:
  defaultBackend:
    service:
      name: polls
      port:
        number: 8000
